--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "mercadopago": "^1.5.12",
     "requirejs": "^2.3.6",
     "stripe": "^8.213.0"
